
	* src/compat/iconv.erl, src/compat/sha.erl, c_src/iconv_erl.c,
	m4/iconv.m4, src/Emakefile.in, src/Makefile.am, c_src/Makefile.unix,
	c_src/Makefile.am, doc/Makefile.am, ebin/Makefile.am,
	ebin/exmpp.app.in, configure.ac: Remove 'iconv' and 'sha' from the
	compat layer as they belong to ejabberd specificaly. Also the
	configure script doesn't check for iconv(3) anymore.

2008-05-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Reorganize the final summary and add bold titles to
	make the output more readable.

	* src/core/exmpp_compress.erl: Rename the 'mode' option to
	'packet_mode'.

	* src/core/exmpp_tls.erl: Now interpret options and run the
	corresponding port driver commands.

	* c_src/exmpp_tls.h, c_src/exmpp_tls.c, c_src/Makefile.am: Move common
	TLS constants and functions to a separate C file.

	* c_src/exmpp_tls_openssl.c: Add support for options. Fix a bug with
	the COMMAND_SET_PEER_VERIF command where expected_id was always set to
	the empty string when the caller specified a boolean instead. Add
	preliminary support for certificate verification (WORK IN PROGRESS).
	For now, it understands the basic verification made by OpenSSL and
	check the expected_id against subjectAltName.dNSName (not exactly as
	specified in RFC 2818 though). It still lacks the check against the
	XMPP-specific subjectAltName extension and the commonName.

2008-05-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Import of the new compression layer.

	* configure.ac: Always check for Zlib, not only when the compat layer
	is enabled. Print a summary of supported engines for both TLS and
	compression.

	* src/core/exmpp_compress.erl, c_src/exmpp_compress_zlib.c,
	src/Makefile.am, src/Emakefile.in, c_src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add
	exmpp_compress and its associated port driver.

	* src/core/exmpp_tls.erl: Fixed some issues with documentation.
