@@ -30,7 +30,8 @@
 
 % Compression activation.
 -export([
-  compress/2
+  enable_compression/2,
+  disable_compression/1
 ]).
 
 % Common socket API.
@@ -38,6 +39,9 @@
   send/2,
   recv/2,
   recv/3,
+  setopts/2,
+  peername/1,
+  sockname/1,
   controlling_process/2,
   close/1,
   port_revision/1
@@ -221,7 +225,7 @@ get_engine_driver(Engine_Name) ->
 %%     Compress_Socket = compress_socket()
 %% @doc Enable compression over the given socket.
 
-compress(Socket_Desc, Options) ->
+enable_compression(Socket_Desc, Options) ->
     % Start a port driver instance.
     Driver_Name = get_engine_from_options(Options),
     Port = try
@@ -260,6 +264,17 @@ compress(Socket_Desc, Options) ->
             exmpp_internals:unload_driver(Driver_Name),
             throw(Exception2)
     end.
+
+%% @spec (Compress_Socket) -> Socket_Desc
+%%     Compress_Socket = compress_socket()
+%%     Socket_Desc = {Mod, Socket}
+%%     Mod = atom()
+%%     Socket = term()
+%% @doc Disable compression and return the underlying socket.
+
+disable_compression(#compress_socket{socket = Socket_Desc, port = Port}) ->
+    exmpp_internals:close_port(Port),
+    Socket_Desc.
 
 % --------------------------------------------------------------------
 % Activation helpers.
@@ -364,23 +379,55 @@ recv(#compress_socket{socket = Socket_Desc, packet_mode = Packet_Mode,
             {error, Exception}
     end.
 
+%% @spec (Compress_Socket, Options) -> ok | {error, posix()}
+%%     Socket_Desc = {Mod, Socket}
+%%     Mod = atom()
+%%     Socket = term()
+%%     Options = list()
+%% @doc Sets one or more options for a socket.
+
+setopts(#compress_socket{socket = Socket_Desc}, Options) ->
+    exmpp_internals:gen_setopts(Socket_Desc, Options).
+
+%% @spec (Compress_Socket) -> {ok, {Address, Port}} | {error, posix()}
+%%     Socket_Desc = {Mod, Socket}
+%%     Mod = atom()
+%%     Socket = term()
+%%     Address = ip_address()
+%%     Port = integer()
+%% @doc Returns the address and port for the other end of a connection.
+
+peername(#compress_socket{socket = Socket_Desc}) ->
+    exmpp_internals:gen_peername(Socket_Desc).
+
+%% @spec (Compress_Socket) -> {ok, {Address, Port}} | {error, posix()}
+%%     Socket_Desc = {Mod, Socket}
+%%     Mod = atom()
+%%     Socket = term()
+%%     Address = ip_address()
+%%     Port = integer()
+%% @doc Returns the local address and port number for a socket.
+
+sockname(#compress_socket{socket = Socket_Desc}) ->
+    exmpp_internals:gen_sockname(Socket_Desc).
+
 %% @spec (Compress_Socket, Pid) -> ok | {error, Reason}
 %%     Compress_Socket = compress_socket()
 %%     Pid = pid()
 %%     Reason = term()
 %% @doc Change the controlling socket of the underlying socket.
 
-controlling_process(#compress_socket{socket = {Mod, Socket}}, Pid) ->
-    Mod:controlling_process(Socket, Pid).
+controlling_process(#compress_socket{socket = Socket_Desc}, Pid) ->
+    exmpp_internals:gen_controlling_process(Socket_Desc, Pid).
 
 %% @spec (Compress_Socket) -> ok | {error, Reason}
 %%     Compress_Socket = compress_socket()
 %%     Reason = term()
 %% @doc Close the underlying socket.
 
-close(#compress_socket{socket = {Mod, Socket}}) ->
+close(#compress_socket{socket = Socket_Desc}) ->
     % Close the underlying socket.
-    Mod:close(Socket).
+    exmpp_internals:gen_close(Socket_Desc).
 
 %% @hidden
 
